--- a/exercicios/ex023/tabela001.html
+++ b/exercicios/ex023/tabela001.html
@@ -12,21 +12,21 @@
 
     table{
       width: 400px;
+      height: 400px;
       border-collapse: collapse;
-    }
-
-    tr.linha{
-      background-color: gray;
     }
 
     td{
       border: 1px solid black;
       padding: 8px;
+      text-align: center;/* Alinhamento horizontal */
+      vertical-align: middle; /* Alinhamento vertical */
     }
 
-    td.dado{
-      background-color: blue;
+    .numero{
+      text-align: right;
     }
+
   </style>
 </head>
 <body>
@@ -39,7 +39,7 @@
         TABLE DATA = dado de tabela
   -->
   <table>
-    <tr class="linha"> <!-- Primeira linha -->
+    <tr> <!-- Primeira linha -->
       <td>A1</td>
       <td>B1</td>
       <td>C1</td>
@@ -47,17 +47,17 @@
     <tr><!-- Segunda linha -->
       <td>A2</td>
       <td>B2</td>
-      <td>C2</td>
+      <td class="numero">C2</td>
     </tr>
     <tr><!-- Terceira linha -->
       <td>A3</td>
       <td>B3</td>
-      <td>C3</td>
+      <td class="numero">C3</td>
     </tr>
     <tr><!-- Quarta linha -->
       <td>A4</td>
       <td>B4</td>
-      <td class="dado">C4</td>
+      <td>C4</td>
     </tr>
   </table>
 </body>
