--- a/exercicios/ex023/tabela002.html
+++ b/exercicios/ex023/tabela002.html
@@ -15,6 +15,13 @@
       border-collapse: collapse;
     }
 
+    caption{
+      font-size: 1.5em;
+      font-weight: bold;
+      padding: 10px;
+      background-color: lightgray;
+    }
+
     th, td{
       border: 1px solid black;
       padding: 10px;
@@ -35,6 +42,7 @@
   <!--
     ANOTOMIA PARA TABELAS GRANDES
     TABLE
+      CAPTION
       THEAD
         TR,TD,TH
       TBODY
@@ -43,10 +51,11 @@
         TR,TD,TH
   -->
   <table>
+    <caption>Área das Unidades Federativas</caption>
     <thead>
       <tr>
-        <th>Estado</th>
-        <th>Área(km²)</th>
+        <th scope="col">Estado</th>
+        <th scope="col" style="width:100px;">Área(km²)</th>
       </tr>
     </thead>
     <tbody>
@@ -161,7 +170,7 @@
     </tbody>
     <tfoot>
       <tr>
-        <th>Total</th>
+        <th scope="row">Total</th>
         <td class="num"><strong>- - -</strong></td>
       </tr>
     </tfoot>
